[package]
name = "helmod-planner"
version = "0.1.0"
authors = ["Daniele"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic="abort"

[profile.release]
panic="abort"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.1"
serde_json = "1.0.44"
clap = "2"